--- a/src/components/shared/Banner/banner.module.scss
+++ b/src/components/shared/Banner/banner.module.scss
@@ -8,19 +8,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   border-radius: $theme-misc-bRadius;
   box-shadow: 0 10px 10px 0 rgba(0, 212, 200, 0.16);
   background-color: $theme-color-primary;
-  padding: 40px $padding-horizontal;
+  padding: 30px $padding-horizontal;
   margin: 30px 0;
 
   p {
     color: $theme-color-secondary;
-    width: 65%;
+    width: 80%;
+    margin-bottom: 20px;
   }
 
   h1 {
     color: $theme-color-white;
-    width: 65%;
+    width: 80%;
   }
 }
