--- a/src/components/Catalogue/ProductsList/productList.module.scss
+++ b/src/components/Catalogue/ProductsList/productList.module.scss
@@ -7,3 +7,10 @@
     margin: 15px 10px;
   }
 }
+
+/* Extra Small Devices */
+@media (max-width: 576.98px) {
+  .product-list {
+    justify-content: center;
+  }
+}
