--- a/src/components/shared/Card/card.module.scss
+++ b/src/components/shared/Card/card.module.scss
@@ -22,3 +22,10 @@
   width: 120px;
   padding: 15px 10px;
 }
+
+/* Extra Small Devices */
+@media (max-width: 576.98px) {
+  .card-small {
+    padding: 15px 0
+  }
+}
