--- a/src/components/shared/UILayout/column.module.scss
+++ b/src/components/shared/UILayout/column.module.scss
@@ -1,59 +1,34 @@
 @import 'theme/_theme.scss';
+@import 'theme/_utils.scss';
 
 .column {
-  margin: 20px 0;
 }
 
-.col-1 {
-  grid-column: span 1;
-}
-
-.col-2 {
-  grid-column: span 2;
-}
-
-.col-3 {
-  grid-column: span 3;
-  
-}
-
-.col-4 {
-  grid-column: span 4;
-  
-}
-
-.col-5 {
-  grid-column: span 5;
-  
-}
-
-.col-6 {
-  grid-column: span 6;
-  
-}
-
-.col-7 {
-  grid-column: span 7;
-  
-}
-
-.col-8 {
-  grid-column: span 8;
-}
-
-.col-9 {
-  grid-column: span 9;
-
-}
-
-.col-10 {
-  grid-column: span 10;
-}
-
-.col-11 {
-  grid-column: span 11;
-}
-
-.col-12 {
+.col-df {
   grid-column: span 12;
+}
+
+/* Extra Small Devices */
+@media (max-width: 576.98px) {
+  @include defineColumns (1, 12, 'xs');
+}
+
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  @include defineColumns (1, 12, 'sm');
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  @include defineColumns (1, 12, 'md');
+}
+
+/* Large devices (desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  @include defineColumns (1, 12, 'lg');
+}
+
+/* Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+  @include defineColumns (1, 12, 'xl');
 }
