--- a/src/theme/_theme.scss
+++ b/src/theme/_theme.scss
@@ -11,12 +11,20 @@ $theme-font-family: 'Montserrat', sans-serif;
 $theme-font-bold: 700;
 $theme-font-rgl: 400;
 $theme-font-root-size: 16px;
-$theme-font-size-xs: .7em;
-$theme-font-size-sm: 1em;
-$theme-font-size-md: 1.6em;
-$theme-font-size-lg: 2.2em;
+$theme-font-size-xs: 14px;
+$theme-font-size-sm: $theme-font-root-size;
+$theme-font-size-xmd: 20px;
+$theme-font-size-md: 22px;
+$theme-font-size-lg: 28px;
+$theme-font-size-xlg: 34px;
 
+
+
+$theme-grid-cols-xs: repeat(12, calc(((100vw - 30px) / 12)));
+$theme-grid-cols-sm: repeat(12, calc(((100vw - 50px) / 12)));
+$theme-grid-cols-md: repeat(12, calc(((100vw - 80px) / 12)));
 $theme-grid-cols-lg: repeat(12, calc(((100vw - 240px) / 12)));
+$theme-grid-cols-xlg: repeat(12, calc(((100vw - 280px) / 12)));
 $theme-grid-cols-areas: "col1 col2 col3 col4 col5 col6 col7 col8 col9 col10 col11 col12";
 
 $theme-shadow-aquamarine: 0 10px 10px 0 rgba(0, 212, 200, 0.16);
