--- a/src/components/DesignSystem/Banner/banner.module.scss
+++ b/src/components/DesignSystem/Banner/banner.module.scss
@@ -1,7 +1,7 @@
 @import 'theme/_theme.scss';
 
 .banner {
-  @include calcFullWidth (100%, 30px);
+  @include calcFullWidth(100%, 30px);
   max-height: 200px;
   display: flex;
   flex-direction: column;
@@ -10,11 +10,12 @@
   border-radius: $theme-misc-bRadius;
   box-shadow: 0 10px 10px 0 rgba(0, 212, 200, 0.16);
   background-color: $theme-color-primary;
+  background-size: cover;
   padding: 30px 30px;
   margin: 30px 0;
 
   p {
-    color: $theme-color-secondary;
+    color: $theme-color-navy;
     width: 80%;
     margin-bottom: 20px;
   }
@@ -28,10 +29,11 @@
 /* Extra Small Devices */
 @media (max-width: 576.98px) {
   .banner {
-    @include calcFullWidth (100%, 12px);
+    @include calcFullWidth(100%, 12px);
     padding: 30px 12px;
 
-    p, h1 {
+    p,
+    h1 {
       width: 100%;
     }
   }
