HOTFIX: set min-height to preserve dimensions

--- a/src/components/DesignSystem/Banner/banner.module.scss
+++ b/src/components/DesignSystem/Banner/banner.module.scss
@@ -3,6 +3,7 @@
 .banner {
   @include calcFullWidth(100%, 30px);
   max-height: 200px;
+  min-height: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
